<resources>
    <string name="app_name">CameraProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="stream_URL">Stream URL</string>
    <string name="default_URL">http://192.168.2.42/cam_pic.php/</string>
    <string name="set_creds">Set credentials</string>
    <string name="start_stream">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
